# htmx-axum-todolist

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
src/: assets.rs  db.rs  lib.rs  main.rs  state.rs  tracing.rs
src/model/: todo.rs
src/repository/: mod.rs  sqlite.rs
src/routes/: mod.rs
src/routes/assets/: mod.rs
src/routes/session/: login.rs  logout.rs  mod.rs  settings.rs
src/routes/todo/: create.rs  delete.rs  index.rs  mod.rs  summary.rs  update.rs
templates/: _create-todo.fragment.html  _layout.html  _layout.style.css  _login.fragment.html  _logout.fragment.html  index.html  login-dialog.fragment.html  settings.fragment.html  todo-form.fragment.html  todo-list.fragment.html  todo-summary.fragment.html  todo.fragment.html
